<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:orientation="vertical"
    android:background ="#fff"
    android:padding="20dp">
    
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/logo"
        android:src="@drawable/troll"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_brand"
        android:text="@string/great_to_see_you_nplease_sign_in"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:fontFamily="@font/baloo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/insert_username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/insert_password"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@color/for_texth1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="15dp">
        </Button>

        <TextView
            android:id="@+id/alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_password"
            android:textColor="#FF0000"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_new_do_sign_up"
            android:textSize="10dp"
            android:background="#00000000"
            android:textColor="@color/black"
            android:textStyle="bold">
        </Button>


    </LinearLayout>


</LinearLayout>